# media-platform

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Justfile  README.md  docker-compose.prod.yml  docker-compose.yml  main.py  package.json  presentation.html  pyproject.toml  tailwind.config.js
backend/: conftest.py  tests.py
backend/config/: settings.py  urls.py  wsgi.py
backend/modules/: MODULE_ARCHITECTURE.md
backend/modules/ai/: __init__.py
backend/modules/ai/chatbot/: README.md  __init__.py  apps.py  conf.py  indexer.py  interface.py  prompts.py  search.py  urls.py  views.py
backend/modules/ai/chatbot/templates/chatbot/: _message.html  chat.html  sidebar.html
backend/modules/ai/providers/: README.md  __init__.py  apps.py  base.py  conf.py  deepseek.py  genai.py  huggingface.py  interface.py  openrouter.py
backend/modules/ai/providers/agents/: architect.py  base.py
backend/modules/base/: __init__.py
backend/modules/base/accounts/: README.md  __init__.py  admin.py  apps.py  interface.py  models.py  urls.py  views.py
backend/modules/base/accounts/migrations/: 0001_initial.py  0002_user_bio_user_profile_image.py
backend/modules/base/accounts/templates/account/: _auth_base.html  account_inactive.html  email.html  email_confirm.html  login.html  logout.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  password_set.html  profile.html  signup.html  verification_sent.html
backend/modules/base/analytics/: README.md  __init__.py  apps.py  conf.py  interface.py  queries.py  urls.py  views.py
backend/modules/base/analytics/templates/analytics/: _database_stats.html  _slow_queries.html  dashboard.html
backend/modules/base/audit/: README.md  __init__.py  apps.py  interface.py  models.py
backend/modules/base/audit/migrations/: 0001_initial.py
backend/modules/base/backup/: README.md  apps.py
backend/modules/base/core/: README.md  __init__.py  apps.py  conf.py  interface.py  models.py  schemas.py  selectors.py  services.py  urls.py  views.py
backend/modules/base/core/templates/: getting_started.html  home.html
backend/modules/base/events/: README.md  __init__.py  apps.py  events.py  interface.py
backend/modules/base/health/: README.md  __init__.py  apps.py  interface.py  urls.py  views.py
backend/modules/base/legal/: README.md  apps.py
backend/modules/base/manual/: README.md  apps.py  urls.py  views.py
backend/modules/base/marketing/: README.md  apps.py
backend/modules/base/media/: README.md  __init__.py  apps.py  interface.py  models.py
backend/modules/base/media/migrations/: 0001_initial.py
backend/modules/base/monitoring/: README.md  apps.py
backend/modules/base/notifications/: README.md  __init__.py  apps.py  interface.py  models.py
backend/modules/base/notifications/migrations/: 0001_initial.py
backend/modules/base/policy/: README.md  __init__.py  apps.py  engine.py  interface.py  roles.yaml
backend/modules/base/registry/: README.md  __init__.py  apps.py  interface.py  registry.py
backend/modules/base/security/: README.md  apps.py
backend/modules/base/seo/: README.md  apps.py
backend/modules/base/settings/: README.md  __init__.py  admin.py  apps.py  context_processors.py  interface.py  models.py
backend/modules/base/settings/migrations/: 0001_initial.py
backend/modules/base/tasks/: README.md  __init__.py  apps.py  interface.py  manager.py
backend/modules/base/ux/: README.md  apps.py
backend/modules/custom/: __init__.py
backend/modules/custom/smart_paper/: apps.py  interface.py  models.py  schemas.py  selectors.py  services.py  urls.py  views.py
backend/modules/custom/smart_paper/migrations/: 0001_initial.py
backend/modules/custom/smart_paper/templates/smart_paper/: index.html  viewer.html
backend/modules/custom/smart_paper/templates/smart_paper/partials/: paper_row.html  paper_row_completed.html  processing_status.html
backend/modules/custom/vision/: README.md  __init__.py  apps.py  interface.py  models.py  requirements.txt  schemas.py  selectors.py  services.py  urls.py  views.py
backend/modules/custom/vision/migrations/: 0001_initial.py  0002_mediacomment.py
backend/modules/custom/vision/templates/vision/: index.html  viewer.html
backend/modules/custom/vision/templates/vision/partials/: comment_row.html  media_card.html
backend/static/css/: input.css
backend/static/js/: vendor-entry.js
backend/static/js/core/: storage.js
backend/static/js/modules/local-db/: index.js  schema.sql
backend/templates/: 404.html  500.html  _loading_spinner.html  _toast.html  base.html
crates/daemon_one_core/: Cargo.toml
crates/daemon_one_core/src/: lib.rs
scripts/: create_module.py
