[package]
name = "daemon_one_core"
version = "0.1.0"
edition = "2021"
description = "DAEMON-ONE: High-performance Rust accelerator for AI preprocessing and CPU-intensive tasks"

[lib]
name = "daemon_one_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.8"  # Parallel processing
tiktoken-rs = "0.5"  # Token counting for AI
unicode-segmentation = "1.10"  # Text processing
regex = "1.10"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
